--- a/hort_parts/templates/hort_parts/index.html
+++ b/hort_parts/templates/hort_parts/index.html
@@ -13,13 +13,13 @@
     </div>
 
     <a id="header-menu-trigger" href="#0">
-        <span class="header-menu-text">Menu</span>
+        <span class="header-menu-text">{% trans 'Menu' %}</span>
         <span class="header-menu-icon"></span>
     </a>
 
     <nav id="menu-nav-wrap">
 
-        <a href="#0" class="close-button" title="close"><span>Close</span></a>
+        <a href="#0" class="close-button" title="close"><span>{% trans 'Close' %}</span></a>
 
         <h3>Hort Parts.</h3>
 
