--- a/hort_parts/templates/hort_parts/product/header.html
+++ b/hort_parts/templates/hort_parts/product/header.html
@@ -37,7 +37,7 @@
                         <li class="lvl1 parent megamenu">
                             <a href="{% url 'hort:home' %}">{% trans 'Home' %}</a>
                         </li>
-                        <li class="lvl1 parent megamenu"><a href="#">Product
+                        <li class="lvl1 parent megamenu"><a href="#">{% trans 'Product' %}
                             <i class="anm anm-angle-down-l"></i></a>
                             <div class="megamenu style2">
                                 <ul class="grid mmWrapper">
