--- a/hort_parts/templates/hort_parts/index.html
+++ b/hort_parts/templates/hort_parts/index.html
@@ -117,7 +117,7 @@
                                         <div class="gallery_overlay">
                                             <p class="brand_name heading-3"><span>Hort</span></p>
                                             <p class="light brand_name">
-                                                <span>Shock absorbers</span>
+                                                <span>{% trans 'Shock absorbers' %}</span>
                                             </p>
                                         </div>
                                     </a>
@@ -125,13 +125,13 @@
 
                                 <div class="gallery-skin border-bottom">
                                     <a class="thumb"
-                                       href="#/images/page-1_image05_original.jpg"
+                                       href="waterpump/"
                                        data-gallery="5">
-                                        <img src="{% static 'images/page-1_image05.jpg' %}" alt="">
+                                        <img src="{% static 'images/catalog/waterpump2.png' %}" alt="">
                                         <span class="thumb_overlay"></span>
                                         <div class="gallery_overlay">
                                             <p class="brand_name heading-3"><span>Hort</span></p>
-                                            <p class="light brand_name"><span>Honda Project 2and4 Concept</span></p>
+                                            <p class="light brand_name"><span>{% trans 'Water Pump' %}</span></p>
                                         </div>
                                     </a>
                                 </div>
@@ -142,7 +142,7 @@
 
                                 <div class="gallery-skin border-bottom">
                                     <a class="thumb"
-                                       href="#/images/page-1_image02_original.jpg"
+                                       href="#"
                                        data-gallery="5">
                                         <img src="{% static 'images/page-1_image02.jpg' %}" alt="">
                                         <span class="thumb_overlay"></span>
@@ -155,7 +155,7 @@
 
                                 <div class="gallery-skin border-bottom">
                                     <a class="thumb"
-                                       href="#/images/page-1_image04_original.jpg"
+                                       href="#"
                                        data-gallery="5">
                                         <img src="{% static 'images/page-1_image04.jpg' %}" alt="">
                                         <span class="thumb_overlay"></span>
@@ -168,7 +168,7 @@
 
                                 <div class="gallery-skin border-bottom">
                                     <a class="thumb"
-                                       href="#/images/page-1_image06_original.jpg"
+                                       href="#"
                                        data-gallery="5">
                                         <img src="{% static 'images/page-1_image06.jpg' %}" alt="">
                                         <span class="thumb_overlay"></span>
@@ -185,7 +185,7 @@
 
                                 <div class="gallery-skin border-bottom">
                                     <a class="thumb "
-                                       href="#/images/page-1_image03_original.jpg"
+                                       href="#"
                                        data-gallery="5">
                                         <img src="{% static 'images/page-1_image03.jpg' %}" alt="">
                                         <span class="thumb_overlay"></span>
@@ -198,7 +198,7 @@
 
                                 <div class="gallery-skin border-bottom">
                                     <a class="thumb "
-                                       href="#/images/page-1_image07_original.jpg"
+                                       href="#"
                                        data-gallery="5">
                                         <img src="{% static 'images/page-1_image07.jpg' %}" alt="">
                                         <span class="thumb_overlay"></span>
@@ -227,7 +227,7 @@
 
                                 <div class="gallery-skin border-bottom">
                                     <a class="thumb"
-                                       href="#/images/page-1_image01_original.jpg"
+                                       href="#"
                                        data-gallery="5">
                                         <img src="{% static 'images/page-1_image01.jpg' %}" alt="">
                                         <span class="thumb_overlay"></span>
@@ -242,7 +242,7 @@
 
                                 <div class="gallery-skin border-bottom">
                                     <a class="thumb"
-                                       href="#/images/page-1_image05_original.jpg"
+                                       href="#"
                                        data-gallery="5">
                                         <img src="{% static 'images/page-1_image05.jpg' %}" alt="">
                                         <span class="thumb_overlay"></span>
@@ -259,7 +259,7 @@
 
                                 <div class="gallery-skin border-bottom">
                                     <a class="thumb"
-                                       href="#/images/page-1_image02_original.jpg"
+                                       href="#"
                                        data-gallery="5">
                                         <img src="{% static 'images/page-1_image02.jpg' %}" alt="">
                                         <span class="thumb_overlay"></span>
@@ -272,7 +272,7 @@
 
                                 <div class="gallery-skin border-bottom">
                                     <a class="thumb"
-                                       href="#/images/page-1_image04_original.jpg"
+                                       href="#"
                                        data-gallery="5">
                                         <img src="{% static 'images/page-1_image04.jpg' %}" alt="">
                                         <span class="thumb_overlay"></span>
@@ -285,7 +285,7 @@
 
                                 <div class="gallery-skin border-bottom">
                                     <a class="thumb"
-                                       href="#/images/page-1_image06_original.jpg"
+                                       href="#"
                                        data-gallery="5">
                                         <img src="{% static 'images/page-1_image06.jpg' %}" alt="">
                                         <span class="thumb_overlay"></span>
@@ -302,7 +302,7 @@
 
                                 <div class="gallery-skin border-bottom">
                                     <a class="thumb "
-                                       href="#/images/page-1_image03_original.jpg"
+                                       href="#"
                                        data-gallery="5">
                                         <img src="{% static 'images/page-1_image03.jpg' %}" alt="">
                                         <span class="thumb_overlay"></span>
@@ -315,7 +315,7 @@
 
                                 <div class="gallery-skin border-bottom">
                                     <a class="thumb "
-                                       href="#/images/page-1_image07_original.jpg"
+                                       href="#"
                                        data-gallery="5">
                                         <img src="{% static 'images/page-1_image07.jpg' %}" alt="">
                                         <span class="thumb_overlay"></span>
@@ -346,7 +346,7 @@
 
                                 <div class="gallery-skin border-bottom">
                                     <a class="thumb"
-                                       href="#/images/page-1_image01_original.jpg"
+                                       href="#"
                                        data-gallery="5">
                                         <img src="{% static 'images/page-1_image01.jpg' %}" alt="">
                                         <span class="thumb_overlay"></span>
@@ -361,7 +361,7 @@
 
                                 <div class="gallery-skin border-bottom">
                                     <a class="thumb"
-                                       href="#/images/page-1_image05_original.jpg"
+                                       href="#"
                                        data-gallery="5">
                                         <img src="{% static 'images/page-1_image05.jpg' %}" alt="">
                                         <span class="thumb_overlay"></span>
@@ -378,7 +378,7 @@
 
                                 <div class="gallery-skin border-bottom">
                                     <a class="thumb"
-                                       href="#/images/page-1_image02_original.jpg"
+                                       href="#"
                                        data-gallery="5">
                                         <img src="{% static 'images/page-1_image02.jpg' %}" alt="">
                                         <span class="thumb_overlay"></span>
@@ -391,7 +391,7 @@
 
                                 <div class="gallery-skin border-bottom">
                                     <a class="thumb"
-                                       href="#/images/page-1_image04_original.jpg"
+                                       href="#"
                                        data-gallery="5">
                                         <img src="{% static 'images/page-1_image04.jpg' %}" alt="">
                                         <span class="thumb_overlay"></span>
@@ -404,7 +404,7 @@
 
                                 <div class="gallery-skin border-bottom">
                                     <a class="thumb"
-                                       href="#/images/page-1_image06_original.jpg"
+                                       href="#"
                                        data-gallery="5">
                                         <img src="{% static 'images/page-1_image06.jpg' %}" alt="">
                                         <span class="thumb_overlay"></span>
@@ -421,7 +421,7 @@
 
                                 <div class="gallery-skin border-bottom">
                                     <a class="thumb "
-                                       href="#/images/page-1_image03_original.jpg"
+                                       href="#"
                                        data-gallery="5">
                                         <img src="{% static 'images/page-1_image03.jpg' %}" alt="">
                                         <span class="thumb_overlay"></span>
@@ -434,7 +434,7 @@
 
                                 <div class="gallery-skin border-bottom">
                                     <a class="thumb "
-                                       href="#/images/page-1_image07_original.jpg"
+                                       href="#"
                                        data-gallery="5">
                                         <img src="{% static 'images/page-1_image07.jpg' %}" alt="">
                                         <span class="thumb_overlay"></span>
