--- a/hort_parts/templates/hort_parts/index.html
+++ b/hort_parts/templates/hort_parts/index.html
@@ -115,13 +115,30 @@
                                         <img src="{% static 'images/catalog/absorber2.png' %}" alt="">
                                         <span class="thumb_overlay"></span>
                                         <div class="gallery_overlay">
-                                            <p class="brand_name heading-3"><span>Hort</span></p>
+                                            <p class="brand_name heading-3"><span>HORT</span></p>
                                             <p class="light brand_name">
-                                                <span>{% trans 'Shock absorbers' %}</span>
+                                                <span>{% trans 'SHOCK ABSORBERS' %}</span>
                                             </p>
                                         </div>
                                     </a>
                                 </div>
+
+                                <div class="gallery-skin border-bottom">
+                                    <a class="thumb"
+                                       href="thermostat/"
+                                       data-gallery="5">
+                                        <img src="{% static 'images/catalog/thermostat2.png' %}" alt="">
+                                        <span class="thumb_overlay"></span>
+                                        <div class="gallery_overlay">
+                                            <p class="brand_name heading-3"><span>HORT</span></p>
+                                            <p class="light brand_name"><span>{% trans 'THERMOSTAT' %}</span></p>
+                                        </div>
+                                    </a>
+                                </div>
+
+                            </div>
+
+                            <div class="col-md-4 col-sm-12 border-right">
 
                                 <div class="gallery-skin border-bottom">
                                     <a class="thumb"
@@ -130,25 +147,8 @@
                                         <img src="{% static 'images/catalog/waterpump2.png' %}" alt="">
                                         <span class="thumb_overlay"></span>
                                         <div class="gallery_overlay">
-                                            <p class="brand_name heading-3"><span>Hort</span></p>
-                                            <p class="light brand_name"><span>{% trans 'Water Pump' %}</span></p>
-                                        </div>
-                                    </a>
-                                </div>
-
-                            </div>
-
-                            <div class="col-md-4 col-sm-12 border-right">
-
-                                <div class="gallery-skin border-bottom">
-                                    <a class="thumb"
-                                       href="#"
-                                       data-gallery="5">
-                                        <img src="{% static 'images/page-1_image02.jpg' %}" alt="">
-                                        <span class="thumb_overlay"></span>
-                                        <div class="gallery_overlay">
-                                            <p class="brand_name heading-3"><span>Hort</span></p>
-                                            <p class="light brand_name"><span>Wiper Blade Pro</span></p>
+                                            <p class="brand_name heading-3"><span>HORT</span></p>
+                                            <p class="light brand_name"><span>{% trans 'WATER PUMP' %}</span></p>
                                         </div>
                                     </a>
                                 </div>
@@ -160,7 +160,7 @@
                                         <img src="{% static 'images/page-1_image04.jpg' %}" alt="">
                                         <span class="thumb_overlay"></span>
                                         <div class="gallery_overlay">
-                                            <p class="brand_name heading-3"><span>Hort</span></p>
+                                            <p class="brand_name heading-3"><span>HORT</span></p>
                                             <p class="light brand_name"><span>LED Headlight</span></p>
                                         </div>
                                     </a>
@@ -173,7 +173,7 @@
                                         <img src="{% static 'images/page-1_image06.jpg' %}" alt="">
                                         <span class="thumb_overlay"></span>
                                         <div class="gallery_overlay">
-                                            <p class="brand_name heading-3"><span>Hort</span></p>
+                                            <p class="brand_name heading-3"><span>HORT</span></p>
                                             <p class="light brand_name"><span>Wiper Blade Standart</span></p>
                                         </div>
                                     </a>
@@ -190,7 +190,7 @@
                                         <img src="{% static 'images/page-1_image03.jpg' %}" alt="">
                                         <span class="thumb_overlay"></span>
                                         <div class="gallery_overlay">
-                                            <p class="brand_name heading-3"><span>Hort</span></p>
+                                            <p class="brand_name heading-3"><span>HORT</span></p>
                                             <p class="light brand_name"><span>Alfa-Romeo Giulia 2016</span></p>
                                         </div>
                                     </a>
@@ -203,7 +203,7 @@
                                         <img src="{% static 'images/page-1_image07.jpg' %}" alt="">
                                         <span class="thumb_overlay"></span>
                                         <div class="gallery_overlay">
-                                            <p class="brand_name heading-3"><span>Hort</span></p>
+                                            <p class="brand_name heading-3"><span>HORT</span></p>
                                             <p class="light brand_name"><span>BRABUS Mercedes<br class="br-lg-on">
                                                 Amg GT-S 2016</span>
                                             </p>
@@ -232,7 +232,7 @@
                                         <img src="{% static 'images/page-1_image01.jpg' %}" alt="">
                                         <span class="thumb_overlay"></span>
                                         <div class="gallery_overlay">
-                                            <p class="brand_name heading-3"><span>Hort</span></p>
+                                            <p class="brand_name heading-3"><span>HORT</span></p>
                                             <p class="light brand_name"><span>BRABUS Mercedes S-65 <br class="br-lg-on">
                                                 ROCKET-900 2015</span>
                                             </p>
@@ -247,7 +247,7 @@
                                         <img src="{% static 'images/page-1_image05.jpg' %}" alt="">
                                         <span class="thumb_overlay"></span>
                                         <div class="gallery_overlay">
-                                            <p class="brand_name heading-3"><span>Hort</span></p>
+                                            <p class="brand_name heading-3"><span>HORT</span></p>
                                             <p class="light brand_name"><span>Honda Project 2and4 Concept</span></p>
                                         </div>
                                     </a>
@@ -264,7 +264,7 @@
                                         <img src="{% static 'images/page-1_image02.jpg' %}" alt="">
                                         <span class="thumb_overlay"></span>
                                         <div class="gallery_overlay">
-                                            <p class="brand_name heading-3"><span>Hort</span></p>
+                                            <p class="brand_name heading-3"><span>HORT</span></p>
                                             <p class="light brand_name"><span>Wiper Blade Pro</span></p>
                                         </div>
                                     </a>
@@ -277,7 +277,7 @@
                                         <img src="{% static 'images/page-1_image04.jpg' %}" alt="">
                                         <span class="thumb_overlay"></span>
                                         <div class="gallery_overlay">
-                                            <p class="brand_name heading-3"><span>Hort</span></p>
+                                            <p class="brand_name heading-3"><span>HORT</span></p>
                                             <p class="light brand_name"><span>LED Headlight</span></p>
                                         </div>
                                     </a>
@@ -290,7 +290,7 @@
                                         <img src="{% static 'images/page-1_image06.jpg' %}" alt="">
                                         <span class="thumb_overlay"></span>
                                         <div class="gallery_overlay">
-                                            <p class="brand_name heading-3"><span>Hort</span></p>
+                                            <p class="brand_name heading-3"><span>HORT</span></p>
                                             <p class="light brand_name"><span>Wiper Blade Standart</span></p>
                                         </div>
                                     </a>
@@ -307,7 +307,7 @@
                                         <img src="{% static 'images/page-1_image03.jpg' %}" alt="">
                                         <span class="thumb_overlay"></span>
                                         <div class="gallery_overlay">
-                                            <p class="brand_name heading-3"><span>Hort</span></p>
+                                            <p class="brand_name heading-3"><span>HORT</span></p>
                                             <p class="light brand_name"><span>Alfa-Romeo Giulia 2016</span></p>
                                         </div>
                                     </a>
@@ -320,7 +320,7 @@
                                         <img src="{% static 'images/page-1_image07.jpg' %}" alt="">
                                         <span class="thumb_overlay"></span>
                                         <div class="gallery_overlay">
-                                            <p class="brand_name heading-3"><span>Hort</span></p>
+                                            <p class="brand_name heading-3"><span>HORT</span></p>
                                             <p class="light brand_name"><span>BRABUS Mercedes<br class="br-lg-on">
                                                 Amg GT-S 2016</span>
                                             </p>
@@ -351,7 +351,7 @@
                                         <img src="{% static 'images/page-1_image01.jpg' %}" alt="">
                                         <span class="thumb_overlay"></span>
                                         <div class="gallery_overlay">
-                                            <p class="brand_name heading-3"><span>Hort</span></p>
+                                            <p class="brand_name heading-3"><span>HORT</span></p>
                                             <p class="light brand_name"><span>BRABUS Mercedes S-65 <br class="br-lg-on">
                                                 ROCKET-900 2015</span>
                                             </p>
@@ -366,7 +366,7 @@
                                         <img src="{% static 'images/page-1_image05.jpg' %}" alt="">
                                         <span class="thumb_overlay"></span>
                                         <div class="gallery_overlay">
-                                            <p class="brand_name heading-3"><span>Hort</span></p>
+                                            <p class="brand_name heading-3"><span>HORT</span></p>
                                             <p class="light brand_name"><span>Honda Project 2and4 Concept</span></p>
                                         </div>
                                     </a>
@@ -383,7 +383,7 @@
                                         <img src="{% static 'images/page-1_image02.jpg' %}" alt="">
                                         <span class="thumb_overlay"></span>
                                         <div class="gallery_overlay">
-                                            <p class="brand_name heading-3"><span>Hort</span></p>
+                                            <p class="brand_name heading-3"><span>HORT</span></p>
                                             <p class="light brand_name"><span>Wiper Blade Pro</span></p>
                                         </div>
                                     </a>
@@ -396,7 +396,7 @@
                                         <img src="{% static 'images/page-1_image04.jpg' %}" alt="">
                                         <span class="thumb_overlay"></span>
                                         <div class="gallery_overlay">
-                                            <p class="brand_name heading-3"><span>Hort</span></p>
+                                            <p class="brand_name heading-3"><span>HORT</span></p>
                                             <p class="light brand_name"><span>LED Headlight</span></p>
                                         </div>
                                     </a>
@@ -409,7 +409,7 @@
                                         <img src="{% static 'images/page-1_image06.jpg' %}" alt="">
                                         <span class="thumb_overlay"></span>
                                         <div class="gallery_overlay">
-                                            <p class="brand_name heading-3"><span>Hort</span></p>
+                                            <p class="brand_name heading-3"><span>HORT</span></p>
                                             <p class="light brand_name"><span>Wiper Blade Standart</span></p>
                                         </div>
                                     </a>
@@ -426,7 +426,7 @@
                                         <img src="{% static 'images/page-1_image03.jpg' %}" alt="">
                                         <span class="thumb_overlay"></span>
                                         <div class="gallery_overlay">
-                                            <p class="brand_name heading-3"><span>Hort</span></p>
+                                            <p class="brand_name heading-3"><span>HORT</span></p>
                                             <p class="light brand_name"><span>Alfa-Romeo Giulia 2016</span></p>
                                         </div>
                                     </a>
@@ -439,7 +439,7 @@
                                         <img src="{% static 'images/page-1_image07.jpg' %}" alt="">
                                         <span class="thumb_overlay"></span>
                                         <div class="gallery_overlay">
-                                            <p class="brand_name heading-3"><span>Hort</span></p>
+                                            <p class="brand_name heading-3"><span>HORT</span></p>
                                             <p class="light brand_name"><span>BRABUS Mercedes<br class="br-lg-on">
                                                 Amg GT-S 2016</span>
                                             </p>
