--- a/hort_parts/templates/hort_parts/index.html
+++ b/hort_parts/templates/hort_parts/index.html
@@ -157,11 +157,11 @@
                                     <a class="thumb"
                                        href="#"
                                        data-gallery="5">
-                                        <img src="{% static 'images/page-1_image04.jpg' %}" alt="">
+                                        <img src="{% static 'images/catalog/alternator_1.png' %}" alt="">
                                         <span class="thumb_overlay"></span>
                                         <div class="gallery_overlay">
                                             <p class="brand_name heading-3"><span>HORT</span></p>
-                                            <p class="light brand_name"><span>LED Headlight</span></p>
+                                            <p class="light brand_name"><span>{% trans 'GENERATORS' %}</span></p>
                                         </div>
                                     </a>
                                 </div>
@@ -170,11 +170,11 @@
                                     <a class="thumb"
                                        href="#"
                                        data-gallery="5">
-                                        <img src="{% static 'images/page-1_image06.jpg' %}" alt="">
+                                        <img src="{% static 'images/catalog/kolodki_1.png' %}" alt="">
                                         <span class="thumb_overlay"></span>
                                         <div class="gallery_overlay">
                                             <p class="brand_name heading-3"><span>HORT</span></p>
-                                            <p class="light brand_name"><span>Wiper Blade Standart</span></p>
+                                            <p class="light brand_name"><span>{% trans 'BRAKE PADS' %}</span></p>
                                         </div>
                                     </a>
                                 </div>
@@ -187,11 +187,11 @@
                                     <a class="thumb "
                                        href="#"
                                        data-gallery="5">
-                                        <img src="{% static 'images/page-1_image03.jpg' %}" alt="">
+                                        <img src="{% static 'images/catalog/discbrake_1.jpg' %}" alt="">
                                         <span class="thumb_overlay"></span>
                                         <div class="gallery_overlay">
                                             <p class="brand_name heading-3"><span>HORT</span></p>
-                                            <p class="light brand_name"><span>Alfa-Romeo Giulia 2016</span></p>
+                                            <p class="light brand_name"><span>{% trans 'DISK BRAKE' %}</span></p>
                                         </div>
                                     </a>
                                 </div>
@@ -200,12 +200,11 @@
                                     <a class="thumb "
                                        href="#"
                                        data-gallery="5">
-                                        <img src="{% static 'images/page-1_image07.jpg' %}" alt="">
+                                        <img src="{% static 'images/catalog/remni_1.png' %}" alt="">
                                         <span class="thumb_overlay"></span>
                                         <div class="gallery_overlay">
                                             <p class="brand_name heading-3"><span>HORT</span></p>
-                                            <p class="light brand_name"><span>BRABUS Mercedes<br class="br-lg-on">
-                                                Amg GT-S 2016</span>
+                                            <p class="light brand_name"><span>{% trans 'BELT' %}</span>
                                             </p>
                                         </div>
                                     </a>
@@ -229,12 +228,11 @@
                                     <a class="thumb"
                                        href="#"
                                        data-gallery="5">
-                                        <img src="{% static 'images/page-1_image01.jpg' %}" alt="">
+                                        <img src="{% static 'images/catalog/provod_1.png' %}" alt="">
                                         <span class="thumb_overlay"></span>
                                         <div class="gallery_overlay">
                                             <p class="brand_name heading-3"><span>HORT</span></p>
-                                            <p class="light brand_name"><span>BRABUS Mercedes S-65 <br class="br-lg-on">
-                                                ROCKET-900 2015</span>
+                                            <p class="light brand_name"><span>{% trans 'HIGH-VOLTAGE WIRES' %}</span>
                                             </p>
                                         </div>
                                     </a>
@@ -244,11 +242,11 @@
                                     <a class="thumb"
                                        href="#"
                                        data-gallery="5">
-                                        <img src="{% static 'images/page-1_image05.jpg' %}" alt="">
+                                        <img src="{% static 'images/catalog/gas_stops_1.png' %}" alt="">
                                         <span class="thumb_overlay"></span>
                                         <div class="gallery_overlay">
                                             <p class="brand_name heading-3"><span>HORT</span></p>
-                                            <p class="light brand_name"><span>Honda Project 2and4 Concept</span></p>
+                                            <p class="light brand_name"><span>{% trans 'GAS SPRINGS' %}</span></p>
                                         </div>
                                     </a>
                                 </div>
@@ -261,11 +259,11 @@
                                     <a class="thumb"
                                        href="#"
                                        data-gallery="5">
-                                        <img src="{% static 'images/page-1_image02.jpg' %}" alt="">
+                                        <img src="{% static 'images/catalog/balljoint_1.jpg' %}" alt="">
                                         <span class="thumb_overlay"></span>
                                         <div class="gallery_overlay">
                                             <p class="brand_name heading-3"><span>HORT</span></p>
-                                            <p class="light brand_name"><span>Wiper Blade Pro</span></p>
+                                            <p class="light brand_name"><span>{% trans 'BALL JOINTS' %}</span></p>
                                         </div>
                                     </a>
                                 </div>
@@ -274,11 +272,11 @@
                                     <a class="thumb"
                                        href="#"
                                        data-gallery="5">
-                                        <img src="{% static 'images/page-1_image04.jpg' %}" alt="">
+                                        <img src="{% static 'images/catalog/patrub_1.png' %}" alt="">
                                         <span class="thumb_overlay"></span>
                                         <div class="gallery_overlay">
                                             <p class="brand_name heading-3"><span>HORT</span></p>
-                                            <p class="light brand_name"><span>LED Headlight</span></p>
+                                            <p class="light brand_name"><span>{% trans 'BRANCH PIPES' %}</span></p>
                                         </div>
                                     </a>
                                 </div>
@@ -287,11 +285,11 @@
                                     <a class="thumb"
                                        href="#"
                                        data-gallery="5">
-                                        <img src="{% static 'images/page-1_image06.jpg' %}" alt="">
+                                        <img src="{% static 'images/catalog/controlarm_1.jpg' %}" alt="">
                                         <span class="thumb_overlay"></span>
                                         <div class="gallery_overlay">
                                             <p class="brand_name heading-3"><span>HORT</span></p>
-                                            <p class="light brand_name"><span>Wiper Blade Standart</span></p>
+                                            <p class="light brand_name"><span>{% trans 'CONTROL ARMS' %}</span></p>
                                         </div>
                                     </a>
                                 </div>
@@ -304,11 +302,11 @@
                                     <a class="thumb "
                                        href="#"
                                        data-gallery="5">
-                                        <img src="{% static 'images/page-1_image03.jpg' %}" alt="">
+                                        <img src="{% static 'images/catalog/nerzav_1.jpg' %}" alt="">
                                         <span class="thumb_overlay"></span>
                                         <div class="gallery_overlay">
                                             <p class="brand_name heading-3"><span>HORT</span></p>
-                                            <p class="light brand_name"><span>Alfa-Romeo Giulia 2016</span></p>
+                                            <p class="light brand_name"><span>{% trans 'STAINLESS STEEL FITTINGS' %}</span></p>
                                         </div>
                                     </a>
                                 </div>
@@ -317,12 +315,11 @@
                                     <a class="thumb "
                                        href="#"
                                        data-gallery="5">
-                                        <img src="{% static 'images/page-1_image07.jpg' %}" alt="">
+                                        <img src="{% static 'images/catalog/pruguna_1.jpg' %}" alt="">
                                         <span class="thumb_overlay"></span>
                                         <div class="gallery_overlay">
                                             <p class="brand_name heading-3"><span>HORT</span></p>
-                                            <p class="light brand_name"><span>BRABUS Mercedes<br class="br-lg-on">
-                                                Amg GT-S 2016</span>
+                                            <p class="light brand_name"><span>{% trans 'SUSPENSION SPRINGS' %}</span>
                                             </p>
                                         </div>
                                     </a>
@@ -348,12 +345,11 @@
                                     <a class="thumb"
                                        href="#"
                                        data-gallery="5">
-                                        <img src="{% static 'images/page-1_image01.jpg' %}" alt="">
+                                        <img src="{% static 'images/catalog/starter_1.png' %}" alt="">
                                         <span class="thumb_overlay"></span>
                                         <div class="gallery_overlay">
                                             <p class="brand_name heading-3"><span>HORT</span></p>
-                                            <p class="light brand_name"><span>BRABUS Mercedes S-65 <br class="br-lg-on">
-                                                ROCKET-900 2015</span>
+                                            <p class="light brand_name"><span>{% trans 'STARTERS' %}</span>
                                             </p>
                                         </div>
                                     </a>
@@ -363,11 +359,11 @@
                                     <a class="thumb"
                                        href="#"
                                        data-gallery="5">
-                                        <img src="{% static 'images/page-1_image05.jpg' %}" alt="">
+                                        <img src="{% static 'images/catalog/stoyka_1.png' %}" alt="">
                                         <span class="thumb_overlay"></span>
                                         <div class="gallery_overlay">
                                             <p class="brand_name heading-3"><span>HORT</span></p>
-                                            <p class="light brand_name"><span>Honda Project 2and4 Concept</span></p>
+                                            <p class="light brand_name"><span>{% trans 'STABILIZER STANDS' %}</span></p>
                                         </div>
                                     </a>
                                 </div>
@@ -380,11 +376,11 @@
                                     <a class="thumb"
                                        href="#"
                                        data-gallery="5">
-                                        <img src="{% static 'images/page-1_image02.jpg' %}" alt="">
+                                        <img src="{% static 'images/catalog/cylinder_1.png' %}" alt="">
                                         <span class="thumb_overlay"></span>
                                         <div class="gallery_overlay">
                                             <p class="brand_name heading-3"><span>HORT</span></p>
-                                            <p class="light brand_name"><span>Wiper Blade Pro</span></p>
+                                            <p class="light brand_name"><span>{% trans 'CLUTCH AND BRAKE CYLINDERS' %}</span></p>
                                         </div>
                                     </a>
                                 </div>
@@ -393,11 +389,11 @@
                                     <a class="thumb"
                                        href="#"
                                        data-gallery="5">
-                                        <img src="{% static 'images/page-1_image04.jpg' %}" alt="">
+                                        <img src="{% static 'images/catalog/bracket_1.jpg' %}" alt="">
                                         <span class="thumb_overlay"></span>
                                         <div class="gallery_overlay">
                                             <p class="brand_name heading-3"><span>HORT</span></p>
-                                            <p class="light brand_name"><span>LED Headlight</span></p>
+                                            <p class="light brand_name"><span>{% trans 'BRACKET' %}</span></p>
                                         </div>
                                     </a>
                                 </div>
@@ -406,11 +402,11 @@
                                     <a class="thumb"
                                        href="#"
                                        data-gallery="5">
-                                        <img src="{% static 'images/page-1_image06.jpg' %}" alt="">
+                                        <img src="{% static 'images/catalog/rubberbushing_1.jpg' %}" alt="">
                                         <span class="thumb_overlay"></span>
                                         <div class="gallery_overlay">
                                             <p class="brand_name heading-3"><span>HORT</span></p>
-                                            <p class="light brand_name"><span>Wiper Blade Standart</span></p>
+                                            <p class="light brand_name"><span>{% trans 'RUBBER BUSHINGS' %}</span></p>
                                         </div>
                                     </a>
                                 </div>
@@ -423,11 +419,11 @@
                                     <a class="thumb "
                                        href="#"
                                        data-gallery="5">
-                                        <img src="{% static 'images/page-1_image03.jpg' %}" alt="">
+                                        <img src="{% static 'images/catalog/steeringtip_1.jpg' %}" alt="">
                                         <span class="thumb_overlay"></span>
                                         <div class="gallery_overlay">
                                             <p class="brand_name heading-3"><span>HORT</span></p>
-                                            <p class="light brand_name"><span>Alfa-Romeo Giulia 2016</span></p>
+                                            <p class="light brand_name"><span>{% trans 'STEERING TIPS' %}</span></p>
                                         </div>
                                     </a>
                                 </div>
@@ -436,12 +432,11 @@
                                     <a class="thumb "
                                        href="#"
                                        data-gallery="5">
-                                        <img src="{% static 'images/page-1_image07.jpg' %}" alt="">
+                                        <img src="{% static 'images/catalog/' %}" alt="">
                                         <span class="thumb_overlay"></span>
                                         <div class="gallery_overlay">
                                             <p class="brand_name heading-3"><span>HORT</span></p>
-                                            <p class="light brand_name"><span>BRABUS Mercedes<br class="br-lg-on">
-                                                Amg GT-S 2016</span>
+                                            <p class="light brand_name"><span>{% trans '' %}</span>
                                             </p>
                                         </div>
                                     </a>
