--- a/hort_parts/templates/hort_parts/info/download.html
+++ b/hort_parts/templates/hort_parts/info/download.html
@@ -1,7 +1,7 @@
 {% extends 'hort_parts/main.html' %}
 {% load static i18n hort_tag %}
 {% block  title_page %}
-<title>Hort - Download</title>
+<title>Hort - {% trans 'Download' %}</title>
 {% endblock title_page %}
 
 
